--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,10 +8,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: registry.liwanetworks.com
-  #REGISTRY: docker.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: mohamed/nextjs-demo
-  #IMAGE_NAME: aliponneth/nextjs-demo1
   IMAGE_TAG: 1.0.${{ github.run_number }}
   
 jobs:
@@ -19,6 +16,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
     - uses: actions/checkout@v3
@@ -27,13 +25,14 @@ jobs:
     
     - name: Log into registry ${{ env.REGISTRY }}
       run: docker login ${{ env.REGISTRY }} --username=${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
-     #   uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
-     #   with:
-      #    registry: ${{ env.REGISTRY }}
-       #   username: ${{ secrets.REGISTRY_USERNAME }}
-        #  password: ${{ secrets.REGISTRY_PASSWORD }}
-          
       
+  deployment:
+  
+    runs-on: ubuntu-latest
+    environment: deployment
+    needs: build
+    
+    steps:
     - name: Push the Docker image
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG}}
     
