--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
   deployment:
   
     runs-on: ubuntu-latest
-    environment: deployment
+    environment: production    #deployment
     needs: build
     
     steps:
